<resources>
    <string name="app_name">留学汇</string>
    <string name="footer_academyString">首页</string>
    <string name="footer_tutorString">院校</string>
    <string name="footer_schoolString">院校</string>
    <string name="footer_findString">发现</string>
    <string name="footer_mineString">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="americaString">美国</string>
    <string name="allString">全部</string>
    <string name="amademyTitleString">InnoEdu</string>
    <string name="interesedString">你感兴趣的信息</string>
    <string name="recommentTitleString">— 推荐院校 —</string>
    <string name="hotTitleString">— 热门专业 —</string>
    <string name="hotProfesionalString">热门专业</string>
    <string name="areaTitleString">— 热门地区 —</string>
    <string name="areaBelongString">所属地区</string>
    <string name="areaString">地区</string>
    <string name="rankingTitleString">— 排名 —</string>
    <string name="rankingString">排名&#8195;&#8195;</string>
    <string name="recommentSubTitleString">总有一所学校适合你</string>
    <string name="hotSubTitleString">最受学生欢迎的专业</string>
    <string name="areaSubTitleString">学生最喜欢的地区前10</string>
    <string name="rankingSubTitleString">排名最靠前的10所学校</string>
    <string name="moreString">查看更多</string>
    <string name="introductionString">学校简介</string>
    <string name="tutorListString">导师列表</string>
    <string name="scoreTitleString">申请要求</string>
    <string name="informationString">申请信息</string>
    <string name="informationListString">申请清单</string>
    <string name="openString">展开查看更多</string>
    <string name="shortenString">收起</string>
    <string name="nameString">姓名</string>
    <string name="schoolString">学校</string>
    <string name="majorString">专业</string>
    <string name="scoreString">评分</string>
    <string name="cancleString">取消</string>
    <string name="emptyString"></string>
    <string name="emptyAlertString">内容为空</string>
    <string name="timeslotString">时长：</string>
    <string name="timeStartString">开始时间：</string>
    <string name="timeStartString1">开始时间</string>
    <string name="timeEndString">结束时间</string>

    <string name="accountString">帐号</string>
    <string name="passwordString">密码</string>
    <string name="accountHintString">请输入登录帐号</string>
    <string name="timeNostartString">还未到服务时间</string>
    <string name="passwordHintString">请输入登录密码</string>
    <string name="loginString">确认登录</string>
    <string name="noAccountMesgString">没有帐号，立即注册</string>
    <string name="noLoginString">游客登录</string>
    <string name="loginByQQString">QQ登录</string>
    <string name="loginByWechatString">微信登录</string>
    <string name="registString">注册</string>
    <string name="registForTelString">手机注册</string>
    <string name="registForMailString">邮箱注册</string>
    <string name="userRegistTelString">手机号码</string>
    <string name="userRegistCodeString">验证码&#8195;</string>
    <string name="userRegistMailString">邮箱地址</string>
    <string name="userRegistPasswordString">密码&#8195;&#8195;</string>
    <string name="userRegistConfirmPasswordString">确认密码</string>
    <string name="userRegistRealNameString">真实姓名</string>
    <string name="userRegistIdentityString">选择身份</string>
    <string name="userRegistRefereeString">推荐人&#8195;</string>
    <string name="userRegistTelHintString">输入手机号码</string>
    <string name="userRegistCodeHintString">输入验证码</string>
    <string name="userGetCodeString">获取验证码</string>
    <string name="userRegistMailHintString">输入您的邮箱地址</string>
    <string name="userRegistPasswordHintString">输入您的密码</string>
    <string name="userRegistConfirmPasswordHintString">再次输入您的密码</string>
    <string name="userRegistRealNameHintString">输入您的真实姓名</string>
    <string name="userRegistIdentityHintString">选择您的身份</string>
    <string name="userRegistRefereeHintString">推荐人号</string>
    <string name="userRegistButtonString">确认注册</string>
    <string name="telIsEmptyString">请先填写手机号</string>
    <string name="pswIsNotSameString">密码输入不一致，请重新输入</string>
    <string name="loginNoCompeleteString">登录信息填写不完整</string>
    <string name="recommandAcademyString">推荐院校</string>
    <string name="historySrarchString">历史搜索</string>
    <string name="clearString">清除</string>
    <string name="hoursUnitString">/小时</string>
    <string name="inaugurateString">就职于&#8195;</string>
    <string name="chargeStandardString">收费标准：</string>
    <string name="tutorMajorString">专业：</string>
    <string name="tutorGradeString">年级：</string>
    <string name="tutorCategoryString">类别：</string>
    <string name="personalProfileString">个人简介</string>
    <string name="personalEvaluationString">个人评价</string>
    <string name="serviceExperienceString">服务经历</string>
    <string name="followString">关注</string>
    <string name="subscribeString">预约</string>
    <string name="tutorDetailString">导师详情</string>
    <string name="readMoreString">阅读更多 →</string>
    <string name="subscribeManagerString">预约管理</string>
    <string name="payManagerString">支付管理</string>
    <string name="timeManagerString">时间管理</string>
    <string name="mypauseString">我的钱包</string>
    <string name="myevaluationString">我的评价</string>
    <string name="myfllowString">我的关注</string>
    <string name="serverString">客服</string>
    <string name="settingsString">设置</string>
    <string name="logoutString">退出登录</string>
    <string name="clickLoginString">点击登录</string>
    <string name="firstLoginString">请您先登录</string>
    <string name="serviceDateString">服务日期</string>
    <string name="serviceTimeString">服务时段</string>
    <string name="serviceStartTimeString">开始时间</string>
    <string name="StartTimehintString">点击选择时间</string>
    <string name="consulationhintString">请输入想咨询的内容</string>
    <string name="consulationString">咨询内容</string>
    <string name="ensureScribeString">确认预约</string>
    <string name="totalString">合计：</string>
    <string name="sureString">确认</string>
    <string name="minuteString">分钟</string>
    <string name="yearString">年</string>
    <string name="monthString">月</string>
    <string name="slotTimeEmptyString">请先选择开始时间</string>
    <string name="askContentEmptyString">请先输入咨询内容</string>
    <string name="orderListTitleString">预约管理</string>
    <string name="editorString">编辑</string>
    <string name="orderNumString">订单号：</string>
    <string name="scribeTimeString">预约时间：</string>
    <string name="totlaString">共计</string>
    <string name="totlaPriceString">总计支付：</string>
    <string name="cancleOrderString">取消预约</string>
    <string name="goPayString">去支付</string>
    <string name="receptString">接单</string>
    <string name="LaunchVideoString">发起视频</string>
    <string name="finishServiceString">结束服务</string>
    <string name="toEvaluateString">去评价</string>
    <string name="complaintString">投诉</string>
    <string name="finishOrderString">完成订单</string>
    <string name="deleteString">删除订单</string>
    <string name="deleteString1">删除</string>
    <string name="filterString">筛选</string>
    <string name="filterClearString">清除筛选</string>
    <string name="alertString">提示</string>
    <string name="sureMessageString">确认要执行此操作吗？</string>
    <string name="editString">编辑</string>
    <string name="addTimeString">添加服务时间</string>
    <string name="evaluateHintString">说点什么吧</string>
    <string name="mailHintString">输入邮件地址</string>
    <string name="evaluateString">评价</string>
    <string name="orderComplaintString">订单投诉</string>
    <string name="anonymousString">匿名评价</string>
    <string name="userEvaluateString">个人评价</string>
    <string name="describeStarString">描述相符</string>
    <string name="wholeStarString">整体评分</string>
    <string name="myFocusString">我的关注</string>
    <string name="tutorString">导师机构</string>
    <string name="balanceString">余额</string>
    <string name="cashString">提现</string>
    <string name="rechargeString">充值</string>
    <string name="cashAccountString">提现账户管理</string>
    <string name="ordercodeString">订单编号</string>
    <string name="historyString">历史账单</string>
    <string name="adresstring">邮件地址</string>


    <string name="pull_down_refresh_label">下拉可以刷新</string>
    <string name="pull_down_release_label">松开立即刷新</string>
    <string name="pull_down_refreshing_label">正在刷新数据</string>
    <string name="pull_up_load_label">上拉加载</string>
    <string name="pull_up_loading_label">正在加载数据</string>


    <string name="eg1">常青藤学校</string>
    <string name="eg2">Northeasten University</string>
    <string name="eg3">其他高校</string>
    <string name="eg4">纽约</string>
    <string name="eg5">New York</string>
    <string name="eg6">加州大学伯克利分校</string>
    <string name="eg7">US News排名：6</string>
    <string name="eg8">雅思成绩：</string>
    <string name="eg9">90</string>
    <string name="eg10">费用</string>
    <string name="eg11">申请表：在线填写\n附加申请表：Yes</string>
    <string name="eg12">商务英语专业</string>
    <string name="eg13">大学二年级</string>
    <string name="eg14">机构</string>
    <string name="eg15">个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介</string>
    <string name="eg16">2018.04.13 17:20:56</string>
    <string name="eg17">美国留学如何办理</string>

    <string-array name="academy_tab">
        <item>推荐</item>
        <item>专业</item>
        <item>地区</item>
        <item>排名</item>
    </string-array>

    <string-array name="academyDetail_tab">
        <item>学校简介</item>
        <item>导师列表</item>
        <item>申请要求</item>
    </string-array>

    <string-array name="identity_list">
        <item>学生</item>
        <item>导师</item>
        <item>机构</item>
    </string-array>

    <string-array name="area_list">
        <item>加利福利亚</item>
        <item>德克萨斯州</item>
        <item>纽约</item>
        <item>华盛顿</item>
        <item>宾夕法尼亚</item>
    </string-array>

    <string-array name="tutor_tab">
        <item>全部</item>
        <item>评分不高</item>
        <item>筛选</item>
    </string-array>


</resources>
